<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background_start"
    tools:context=".MainActivity"
    tools:ignore="MergeRootFrame,UselessParent" >

    <RadioGroup
        android:id="@+id/user_radio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" >

        <RadioButton
            android:id="@+id/user_student"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/user_student" />

        <RadioButton
            android:id="@+id/user_professor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_professor" />
        
        <RadioButton
            android:id="@+id/user_bus_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_bus_view" />

        <RadioButton
            android:id="@+id/user_reject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_reject" />

        <Button
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/submit" />

    </RadioGroup>

</FrameLayout>
