<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/new_prof"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background_start"
    android:columnCount="2"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <RadioGroup
        android:id="@+id/avail_radio"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="center|top"
        android:layout_row="2" >

        <RadioButton
            android:id="@+id/available"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/available" />

        <RadioButton
            android:id="@+id/away"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/away_but_reachable" />

        <RadioButton
            android:id="@+id/unavailable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unavailable" />
    </RadioGroup>

    <EditText
        android:id="@+id/location"
        android:layout_width="match_parent"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="left|top"
        android:layout_row="3"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/location"
        android:inputType="textShortMessage"
        android:maxLength="40"
        android:textColorHint="@color/hint_color" />

    <EditText
        android:id="@+id/notes"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="top|left"
        android:layout_row="4"
        android:ems="10"
        android:gravity="top|center_horizontal"
        android:hint="@string/notes"
        android:inputType="textLongMessage"
        android:maxLength="140"
        android:textColorHint="@color/hint_color" />

    <TextView
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="center"
        android:layout_row="5"
        android:text="@string/enter_end_time"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/text" />

    <TimePicker
        android:id="@+id/end_time"
        android:layout_width="match_parent"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="left|top"
        android:layout_row="6" />

    <Button
        android:id="@+id/submit"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"
        android:layout_row="7"
        android:onClick="submit"
        android:text="@string/submit" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_column="0"
        android:layout_gravity="center"
        android:layout_row="1"
        android:ems="10"
        android:hint="@string/enter_name"
        android:gravity="center"
        android:inputType="textPersonName"
        android:textColorHint="@color/hint_color" >

        <requestFocus />
    </EditText>

</GridLayout>
