<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/new_student"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background_start"
    android:columnCount="2"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".NewStudentActivity" >

    <Spinner
        android:id="@+id/field_spinner"
        android:layout_width="140dp"
        android:layout_column="0"
        android:layout_gravity="center|top"
        android:layout_row="0"
        android:entries="@array/field_codes_array" />

    <EditText
        android:id="@+id/course_code"
        android:layout_width="140dp"
        android:layout_column="1"
        android:layout_gravity="center|top"
        android:layout_row="0"
        android:hint="@string/course_code"
        android:inputType="textCapCharacters"
        android:maxLength="5"
        android:textColorHint="@color/hint_color" />

    <EditText
        android:id="@+id/location"
        android:layout_width="match_parent"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="left|top"
        android:layout_row="1"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/location"
        android:inputType="textShortMessage"
        android:maxLength="40"
        android:textColorHint="@color/hint_color" />

    <EditText
        android:id="@+id/notes"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="top|left"
        android:layout_row="2"
        android:ems="10"
        android:gravity="top|center_horizontal"
        android:hint="@string/notes"
        android:inputType="textLongMessage"
        android:maxLength="140"
        android:textColorHint="@color/hint_color" />

    <TextView
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="center"
        android:layout_row="3"
        android:text="@string/enter_end_time"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/text" />

    <TimePicker
        android:id="@+id/end_time"
        android:layout_width="match_parent"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="left|top"
        android:layout_row="4" />

    <Button
        android:id="@+id/submit"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"
        android:layout_row="5"
        android:text="@string/submit" />

</GridLayout>